# snowtools

./: .gitignore  .gitignore.orig  .pydevproject.bak  Changelog.txt  MANIFEST.in  Manifest.in  README.md  README_dev_hpc.txt  README_install_hpc.txt  install_crps_belenos.sh  install_crps_ubuntu.sh  meson.build  pyproject.toml  pyproject_setuptools.toml  requirements-py37.txt  requirements-tests.txt  requirements.txt  setup.py
snowtools/: __init__.py  meson.build
snowtools/DATA/: EMOS_HN.Rdata  METADATA.xml  METADATA_massifs.xml  OPTIONS_V8.1_NEW_OUTPUTS_NC.nam  OPTIONS_V8.1_NEW_OUTPUTS_NC_OPER.nam  OPTIONS_V8.1_NEW_OUTPUTS_NC_SYTRON.nam  OPTIONS_V8.1_NEW_OUTPUTS_NC_reanalysis.nam  OPTIONS_V8.1_NEW_OUTPUTS_NC_reanalysis_avalanches.nam  OPTIONS_V8.1_NEW_OUTPUTS_NC_reanalysis_forprep.nam  OPTIONS_V8.1_NEW_OUTPUTS_NC_reforecast.nam  OPTIONS_V9_MEB_reanalysis.nam  OPTIONS_V9_NEW_OUTPUTS_NC.nam  OPTIONS_V9_OPER.nam  OPTIONS_V9_max.nam  OPTIONS_V9_reanalysis.nam  OPTIONS_V9_reanalysis_forprep.nam  OPTIONS_V9_reference.nam  OPTIONS_XIOS.nam  OPTIONS_test_2d.nam  OPTIONS_test_2d_pappus.nam  __init__.py  emos_2000_2022_212_par_nonorm.Rdata  interpolate_safran.nam  massifs.dbf  massifs.prj  massifs.shp  massifs.shx  massifs_Lbrt93_2019.dbf  massifs_Lbrt93_2019.shp  massifs_Lbrt93_2019.shx  massifs_alpes.sbn  massifs_alpes.shp  massifs_corse.dbf  massifs_corse.shx  massifs_pyrenees.dbf  massifs_pyrenees.sbx  massifs_pyrenees.shp  massifs_pyrenees.shp.xml  massifs_pyrenees.shx  massifs_safran.shp  (+6 more)
snowtools/DATA/OPER/: cron_belenos  cron_sxcen  s2mcron.sh
snowtools/algo/: __init__.py  ensemble.py  forcing.py  obs.py
snowtools/assim/: CrocOrun.py  Ensemble.py  Operators.py  PostCroco.py  __init__.py  crocO.py  utilcrocO.py
snowtools/conf/: S2M_Standard_Metadata.ini  edelweiss.ini  extraction_guess_safran.ini  extraction_guess_safran_reforecast.ini  geometries.ini  geometries_vortex2.ini  s2m_alp.ini  s2m_alp_pp.ini  s2m_cor.ini  s2m_mac.ini  s2m_postes.ini  s2m_prosnow.ini  s2m_pyr.ini  s2m_vog.ini  s2mdev_alp.ini  s2mdev_cor.ini  s2mdev_jur.ini  s2mdev_mac.ini  s2mdev_postes.ini  s2mdev_pyr.ini  s2mdev_vog.ini  s2mdevnew_alp.ini  s2mdevnew_cor.ini  s2mdevnew_jur.ini  s2mdevnew_mac.ini  s2mdevnew_postes.ini  s2mdevnew_pyr.ini  s2mdevnew_vog.ini  safran.ini  safran_reanalysis.ini  safran_reanalysis_era5.ini  safran_reanalysis_moyenne_montagne.ini  safran_reforecast.ini
snowtools/data/: obs.py
snowtools/fortran/: Netcdf_add_massif_info.py
snowtools/interpolation/: Makefile  Makefile_belenos  Makefile_pc  Makefile_pc_mf  Makefile_pc_nomf  Netcdf_add_massif_info.py  ReadMe  alpha_output_test.py  interpolate_safran.f90  meson.build  modd_interpol_safran.f90  modn_interpol_safran.f90  shapefile2NetCDF.py  shapefile2NetCDF_2D.py
snowtools/plots/: Dictionnaries.py  EvoProfilPlot.py  GUI_Proreader.py  compare.py  proReader_mini.py
snowtools/plots/abstracts/: figures.py
snowtools/plots/boxplots/: boxplots.py  violinplot.py
snowtools/plots/maps/: basemap.py  cartopy.py  cartopy_massifs.py  map_helpers.py  mapplotter.py  mapplotter_fileobj.py  mapplotter_gui.py  plot2D.py  quicklookmap.py
snowtools/plots/pearps2m/: postprocess.py  postprocess_plot.py  secure_graph_prod.py
snowtools/plots/scatterplots/: scatterplots.py
snowtools/plots/scores/: moran_scatter.py  perfdiag.py
snowtools/plots/stratiprofile/: Dictionnaries.py  gen_GUI_selfcontain.sh  gui_elements.py  procompare.py  procompare_gui.py  profilPlot.py  proplotter.py  proplotter_functions.py  proplotter_gui.py  proplotter_test_procedure.md  proreader.py  test_proreader.py
snowtools/plots/temporal/: chrono.py  compare_sims.py  demo.py  energybudget.py  escroc_plot.py  impact_comod.py  snowmip_benchmark_plot.py
snowtools/scores/: CompareSimuPosteObsCsv.py  Makefile  clusters.py  crps.f90  crps.pyf  deterministic.py  ensemble.py  generic.py  install_belenos.sh  install_ubuntu.sh  list_scores.py  meson.build  spatial.py
snowtools/scripts/: gen_metadata_massif_file.py
snowtools/scripts/ESMSnowMIP/: ESM_snowmip.py  post_snowmip.py
snowtools/scripts/create_forcing/: Template_creation_FORCING.py  merge_forcing.py  (+6 more)
snowtools/tasks/: crampon_vortex_kitchen.py  crocO_vortex_kitchen.py  edelweiss_command.py  edelweiss_kitchen.py  extract_forcing.py  extract_massif.py  lance_safran.py  runs.py  s2m_command.py  s2m_launcher.py  template.py  vortex_kitchen.py  vortex_task_base.py
snowtools/tests/: export_output.py  future_test_spatial_scores.py  hpc_unit_tests.py  manual_test_install_snowtools.py  meson.build  s2m_instance.py  tempfolder.py  test_Netcdf_add_massif_info.py  test_bdap.py  test_cartopy_plots.py  test_comp_surfex.py  test_dev_surfex.py  test_hydro.py  test_postprocess.py  test_prosimu.py  test_s2m.py  test_scd.py  test_script_compareSimuPostObs.py  test_script_create_forcing.py  test_spatial_scores.py  test_xarray.py
snowtools/tools/: SnowCoverDuration.py  VizForEnsemble.py  change_forcing.py  change_prep.py  combine_memberfiles.py  common_tools.py  emosCSG.py  execute.py  get_requirements.sh  hydro.py  initTG.py  job_gener_pert_forcings.py  makeForcingEnsemble.py  massif_diags.py  meteo.py  perturb_forcing.py  postprocess.py  read_conf.py  special_diags.py  submit_job_gener_pert_forcings_beaufix.py  update_namelist.py  xarray_backend.py  xarray_preprocess.py  xarray_snowtools_accessor.py  xarray_snowtools_backend.py
snowtools/utils/: ESCROCsubensembles.py  FileException.py  Met2Netcdf.py  S2M_standard_file.py  Template_creation_FORCING.py  __init__.py  dates.py  git.py  infomassifs.py  obscsv.py  projections.py  prosimu.py  read_snowpack.py  resources.py  shapefile.py  sun.py  xarray_snowtools.py  xarray_snowtools_accessor.py  xarray_snowtools_backend.py  xarray_snowtools_preprocess.py
vortex-cen/: README.md  README.txt  README_install  README_install_hpc  README_local_tests  README_tests  README_tests_hpc  README_uenv  pyproject.toml
vortex-cen/configs/: vortex_belenos.toml  vortex_pc.toml  vortex_sxcen.toml
vortex-cen/scripts/: assim.py  localtest.py  open_loop.py  set_new_hpc_env.py  sync_hpc_env.py
(+805 files in other folders)
