[build-system]
build-backend = 'mesonpy'
requires = ['meson-python','numpy>=1.24.4', 'ninja', 'wheel']

[project]
name = "snowtools"
version = "2.0.2"
dependencies = [
    'matplotlib<3.10', # with matplotlib 3.10 there is an error removing an AnnotationBbox (cartopy maps)
    'netCDF4',
    'numpy>=1.8, <2.0', # less recent matplotlib versions like 3.5 do not work with numpy>=2.0
    'scipy',
    'python-dateutil',
    'pyproj',
    'shapely',
    'psycopg2',
    'pyshp',
    'pandas',
    'xarray',
    'cartopy',
    'bronx',
    'footprints',
    'epygram',
    'packaging'
]
requires-python = ">=3.6"
readme = "README.md"
description = "Snowtools is a recommended python package to pre-process, run and post-process simulations with the SURFEX-Crocus snowpack model."
license = {file = "LICENCE.txt"}
classifiers=[
    'Operating System :: POSIX :: Linux',

    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',

    'Topic :: Scientific/Engineering',

    'License :: CeCILL-C Free Software License Agreement (CECILL-C)',
]
authors = [
    {name = "Snowtools team, leaded by Matthieu Lafaysse, Meteo-France"}
]
maintainers = [
    {name = "Snowtools team, leaded by Matthieu Lafaysse, Meteo-France"}
]

[project.urls]
Homepage = "https://github.com/UMR-CNRM/snowtools"
Repository = "https://github.com/UMR-CNRM/snowtools"

[project.scripts]
s2m = 'snowtools.tasks.s2m_command:main'
proplotter = 'snowtools.plots.stratiprofile.proplotter:main'
procompare = 'snowtools.plots.stratiprofile.procompare:main'

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]