[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'numpy>=1.21.6',  'ninja', 'wheel']

[project]
name = "snowtools"
version = "2.0.3"
dependencies = [
    'netCDF4',
    'numpy',
    'scipy',
    'python-dateutil',
    'pyproj',
    'shapely',
    'pyshp',
    'pandas<2.3.3',
    'xarray>=0.18.0',  # Enable the use of snowtools xarray plugin
    'bronx',
    'footprints',
    'packaging'
]
requires-python = ">=3.6"
readme = "README.md"
description = "Snowtools is a recommended python package to pre-process, run and post-process simulations with the SURFEX-Crocus snowpack model."
license = {file = "LICENCE.txt"}
classifiers=[
    'Operating System :: POSIX :: Linux',

    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',

    'Topic :: Scientific/Engineering',

    'License :: CeCILL-C Free Software License Agreement (CECILL-C)',
]
authors = [
    {name = "Snowtools team, leaded by Matthieu Lafaysse, Meteo-France"}
]
maintainers = [
    {name = "Snowtools team, leaded by Matthieu Lafaysse, Meteo-France"}
]

[project.optional-dependencies]
# To enable the use of MF's databases extraction tools
sql = [
    'psycopg2',  # psycopg2 not available on MF's HPC because there is not pg_config executable
# Error message :
# If you prefer to avoid building psycopg2 from source, please install the PyPI
# 'psycopg2-binary' package instead.
#    'psycopg2-binary',
]

# To enable the use of graphic tools
plot = [
    'matplotlib',
    'cartopy',
    'epygram>=2.0',
    'rioxarray',
]

# For a full installation
all = [
    'psycopg2',
    'matplotlib',
    'cartopy',
    'epygram>=2.0',
    'rioxarray',
]

[project.urls]
Homepage = "https://github.com/UMR-CNRM/snowtools"
Repository = "https://github.com/UMR-CNRM/snowtools"

[project.scripts]
s2m = 'snowtools.tasks.s2m_command:main'
proplotter = 'snowtools.plots.stratiprofile.proplotter:main'
procompare = 'snowtools.plots.stratiprofile.procompare:main'

[project.entry-points."xarray.backends"]
snowtools = "snowtools.utils.xarray_snowtools_backend:SnowtoolsBackendEntrypoint"

[tool.setuptools.packages.find]
# Explicitely exclude the "cenutils" repository from the setuptool automatic package discovery
# The editable installation on soprano crashes without this statement:
# `error: Multiple top-level packages discovered in a flat-layout: ['bronx', 'cenutils', 'snowtools'].`
exclude = ["cenutils"]
